@@ -6,7 +6,6 @@ using Microsoft.Xna.Framework;
 using Microsoft.Xna.Framework.Graphics;
 using System;
 using System.Collections.Generic;
-using Spooky.Content.Projectiles.Cemetery;
 
 namespace Spooky.Content.NPCs.Boss.Daffodil.Projectiles
 {
