@@ -1,0 +1,140 @@
+using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+using Terraria.Audio;
+using Microsoft.Xna.Framework;
+using Microsoft.Xna.Framework.Graphics;
+using System;
+using System.Collections.Generic;
+
+using Spooky.Content.Dusts;
+using Spooky.Content.NPCs.EggEvent.Projectiles;
+
+namespace Spooky.Content.Projectiles.Sentient
+{
+    public class SentientGatligatorGiblet : ModProjectile
+    {
+        public static readonly SoundStyle ExplosionSound = new("Spooky/Content/Sounds/SpookyHell/EnemyDeath2", SoundType.Sound);
+
+        public override void SetStaticDefaults()
+		{
+			ProjectileID.Sets.TrailCacheLength[Projectile.type] = 12;
+            ProjectileID.Sets.TrailingMode[Projectile.type] = 0;
+		}
+
+        public override void SetDefaults()
+        {
+            Projectile.width = 28;
+            Projectile.height = 22;
+            Projectile.friendly = true;
+            Projectile.tileCollide = true;
+            Projectile.timeLeft = 300;
+            Projectile.penetrate = 1;
+        }
+
+        public override bool PreDraw(ref Color lightColor)
+        {
+            Texture2D tex = ModContent.Request<Texture2D>(Texture).Value;
+            Vector2 drawOrigin = new(tex.Width * 0.5f, Projectile.height * 0.5f);
+
+			for (int oldPos = 0; oldPos < Projectile.oldPos.Length; oldPos++)
+            {
+				float scale = Projectile.scale * (Projectile.oldPos.Length - oldPos) / Projectile.oldPos.Length * 1f;
+                Vector2 drawPos = Projectile.oldPos[oldPos] - Main.screenPosition + drawOrigin + new Vector2(0f, Projectile.gfxOffY);
+                Color color = Projectile.GetAlpha(Color.Red) * ((Projectile.oldPos.Length - oldPos) / (float)Projectile.oldPos.Length);
+                Rectangle rectangle = new(0, (tex.Height / Main.projFrames[Projectile.type]) * Projectile.frame, tex.Width, tex.Height / Main.projFrames[Projectile.type]);
+                Main.EntitySpriteDraw(tex, drawPos, rectangle, color, Projectile.rotation, drawOrigin, scale, SpriteEffects.None, 0);
+            }
+
+            return true;
+        }
+
+        public override void OnHitNPC(NPC target, NPC.HitInfo hit, int damageDone) 
+		{
+            SoundEngine.PlaySound(ExplosionSound, Projectile.Center);
+
+            //spawn blood splatter
+            int NumProjectiles = Main.rand.Next(5, 8);
+            for (int i = 0; i < NumProjectiles; i++)
+            {
+                if (Main.netMode != NetmodeID.MultiplayerClient)
+                {
+                    Projectile.NewProjectile(Projectile.GetSource_Death(), Projectile.Center.X, Projectile.Center.Y, Main.rand.Next(-5, 7),
+                    Main.rand.Next(-3, 3), ModContent.ProjectileType<BloodSplatter>(), 0, 0, 0, 0, 0);
+                }
+            }
+
+            //spawn blood explosion clouds
+            for (int numExplosion = 0; numExplosion < 4; numExplosion++)
+            {
+                int dust = Dust.NewDust(Projectile.Center, Projectile.width / 2, Projectile.height / 2, 
+                ModContent.DustType<SmokeEffect>(), 0f, 0f, 100, Color.Red * 0.65f, Main.rand.NextFloat(0.8f, 1f));
+                Main.dust[dust].noGravity = true;
+
+                if (Main.rand.NextBool(2))
+                {
+                    Main.dust[dust].scale = 0.5f;
+                    Main.dust[dust].fadeIn = 1f + Main.rand.Next(10) * 0.1f;
+                }
+            }
+        }
+
+        public override void AI()
+        {
+            Projectile.rotation += 0.12f * (float)Projectile.direction;
+
+            Projectile.ai[0]++;
+            if (Projectile.ai[0] >= 20)
+            {
+                Projectile.velocity.Y = Projectile.velocity.Y + 0.35f;
+            }
+
+            int foundTarget = HomeOnTarget();
+            if (foundTarget != -1)
+            {
+                NPC target = Main.npc[foundTarget];
+                Vector2 desiredVelocity = Projectile.DirectionTo(target.Center) * 12;
+                Projectile.velocity = Vector2.Lerp(Projectile.velocity, desiredVelocity, 1f / 20);
+            }
+        }
+
+        private int HomeOnTarget()
+        {
+            const float homingMaximumRangeInPixels = 150;
+
+            int selectedTarget = -1;
+            for (int i = 0; i < Main.maxNPCs; i++)
+            {
+                NPC target = Main.npc[i];
+                if (target.CanBeChasedBy(Projectile))
+                {
+                    float distance = Projectile.Distance(target.Center);
+                    if (distance <= homingMaximumRangeInPixels && (selectedTarget == -1 || Projectile.Distance(Main.npc[selectedTarget].Center) > distance))
+                    {
+                        selectedTarget = i;
+                    }
+                }
+            }
+
+            return selectedTarget;
+        }
+
+		public override bool OnTileCollide(Vector2 oldVelocity)
+		{
+            Projectile.ai[0] = 0;
+
+            if (Projectile.velocity.X != oldVelocity.X)
+            {
+                Projectile.position.X = Projectile.position.X + Projectile.velocity.X;
+                Projectile.velocity.X = -oldVelocity.X * 0.5f;
+            }
+            if (Projectile.velocity.Y != oldVelocity.Y)
+            {
+                Projectile.position.Y = Projectile.position.Y + Projectile.velocity.Y;
+                Projectile.velocity.Y = -oldVelocity.Y * 0.5f;
+            }
+
+			return false;
+		}
+    }
+}
