@@ -198,3 +198,6 @@ FemurFractureSkull.DisplayName: Fractured Skull
 VenomBreath.DisplayName: Venom Breath
 CatPet.DisplayName: Black Kitten
 StickyEyePet.DisplayName: Glow In The Dark Eye
+SentientGatligatorGiblet.DisplayName: Meat Giblet
+SwordSlashBase.DisplayName: Sword Slash Base
+SentientKatanaSwingSlash.DisplayName: Conscious Cutter
